--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,6 +1,7 @@
 body {
     background: url("../images/background/Background2.webp") no-repeat center center fixed;
     background-size: cover;
+    
 }
 
 /* Adjust Hero Section to Fit Viewport */
@@ -34,6 +35,8 @@ body {
     font-size: 2.8em;
     margin-bottom: 15px;
     letter-spacing: 1.5px;
+    font-weight: bold;
+    text-shadow: 2px 2px 3px rgba(183, 0, 255, 0.5); /* Soft glow effect */
 }
 
 /* Text inside hero */
