--- a/assets/components/character-chatbot/Sophie/sophie.css
+++ b/assets/components/character-chatbot/Sophie/sophie.css
@@ -226,3 +226,15 @@ background-color: #a30000;
         height: 400px !important;
     }
 }
+
+/* For screens 480px wide and below */
+@media only screen and (max-width: 480px) {
+    #chat-container {
+        width: 100%;
+        max-height: 90vh;
+        bottom: 0;
+        right: 0;
+        border-radius: 0;
+    }
+
+}
