--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ html, body {
     overflow-x: hidden; /* Prevents horizontal scrolling */
     margin: 0;
     padding: 0;
+    background-color: black;
 }
 
 /* Global Styles */
